Update some gameTemplate file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <h1>tap-spec</h1>
+      <h1>Tap-State</h1>
     </main>
     <script src="bundle.js"></script>
   </body>
