made some svg shapes for state

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <main>
       <h1>tap-spec</h1>
+      <svg width="64px" height="64px" ><path d=""/></svg>
     </main>
     <script src="bundle.js"></script>
   </body>
