--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="">
   <head>
     <meta charset="utf-8" />
-    <title>tap-spec</title>
+    <title>tap-state</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="index.css" rel="stylesheet" />
   </head>
   <body>
     <main>
-      <h1>Tap-State</h1>
       <svg width="64px" height="64px" ><path d=""/></svg>
+      <h1>Tap-State</h1>
     </main>
     <script src="bundle.js"></script>
   </body>
